# Rotation

./: README.md  pyproject.toml  requirements.txt
src/rotation/: README.md  __init__.py  matrix.py
src/rotation/quaternion/: README.md  __init__.py  container.py  format.py
src/rotation/rodrigues/: README.md  __init__.py  rodrigues_rotation.py  skew_symmetric_matrix.py
