[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rotation"
version = "0.0.1"
authors = [
  { name = "Ryuto Yoshida" },
]
description = "Utilities for representing 3D rotations: validated rotation matrices, quaternions with configurable layout, and Rodrigues parameters with skew-symmetric matrices."
readme = "src/rotation/README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "units @ git+https://github.com/ry-yoshida-private/Units.git",
    "cartesian-axis-3d @ git+https://github.com/ry-yoshida-private/CartesianAxis3D.git",
]

[project.urls]
"Homepage" = "https://github.com/ry-yoshida-private/Rotation"
"Bug Tracker" = "https://github.com/ry-yoshida-private/Rotation/issues"

[tool.setuptools.packages.find]
where = ["src"]
